--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,15 @@
-<<<<<<< HEAD
 .vscode/.browse.c_cpp.db*
 .vscode/c_cpp_properties.json
 .vscode/launch.json
 .vscode/ipch
+.vscode/extensions.json
 /cmake-build-uno/
+/build/
 
 # CMake
 CMakeLists.txt.user
 CMakeListsPrivate.txt
-=======
 CMakeLists.txt.user
->>>>>>> 76bfea5 (Initial commit)
 CMakeCache.txt
 CMakeFiles
 CMakeScripts
@@ -21,7 +20,6 @@ install_manifest.txt
 compile_commands.json
 CTestTestfile.cmake
 _deps
-<<<<<<< HEAD
 
 # Plarformio
 .pioenvs
@@ -29,5 +27,3 @@ _deps
 .clang_complete
 .gcc-flags.json
 .pio
-=======
->>>>>>> 76bfea5 (Initial commit)
